@@ -33,9 +33,11 @@
   <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\Lib\0Harmony.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\Lib\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,21 +49,27 @@
     <Reference Include="System.Xml" />
     <Reference Include="VintagestoryAPI">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\VintagestoryAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="VintagestoryLib">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\VintagestoryLib.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="VSBuildLib">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\VSBuildLib.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="VSCreativeMod">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\Mods\VSCreativeMod.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="VSEssentials">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\Mods\VSEssentials.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="VSSurvivalMod">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\Mods\VSSurvivalMod.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
