@@ -1,4 +1,6 @@
-﻿using System;
+﻿using ShannonMod.BlockEntities;
+using ShannonMod.Blocks;
+using System;
 using Vintagestory.API.Common;
 
 namespace ShannonMod
@@ -8,6 +10,11 @@ namespace ShannonMod
         public override void Start(ICoreAPI api)
         {
             base.Start(api);
+            //register blocks
+            api.RegisterBlockClass("cuttingboard", typeof(CuttingBoard));
+
+            //register block entities
+            api.RegisterBlockEntityClass("becuttingboard", typeof(BECuttingBoard));
         }
     }
 }
