@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+	<LangVersion>9</LangVersion>
     <RunAnalyzersDuringBuild>False</RunAnalyzersDuringBuild>
     <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
   </PropertyGroup>
@@ -9,27 +10,35 @@
   <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\Lib\0Harmony.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\Lib\Newtonsoft.Json.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VintagestoryAPI">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\VintagestoryAPI.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VintagestoryLib">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\VintagestoryLib.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VSBuildLib">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\VSBuildLib.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VSCreativeMod">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\Mods\VSCreativeMod.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VSEssentials">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\Mods\VSEssentials.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="VSSurvivalMod">
       <HintPath>..\..\..\..\..\AppData\Roaming\Vintagestory\VS1165\Mods\VSSurvivalMod.dll</HintPath>
+      <Private>false</Private>
     </Reference>
   </ItemGroup>
 
